--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- roboto font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
-    <title>React App</title>
+    <title>Charlotte Wong</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
